overlapping issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -5860,7 +5860,7 @@ h3 {
   display: none;
   position: absolute;
   /*top: 100%;*/
-  top: 60px;
+  top: 40px;
   left: 0;
   right: 0;
   margin: 0 auto;
